crates/math-core/tests/snapshots/error_test__sqrt_closed.snap
---
source: crates/math-core/tests/error_test.rs
expression: "{\\sqrt}"
---
Error: Expected argument but got closing token (`}`, `\end`, `\right`).
   ╭─[ <input>:1:7 ]
   │
 1 │ {\sqrt}
   │       ┬  
   │       ╰── expected an argument here
───╯
